web: fix overflow + better readability

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,7 @@
 html {
   scroll-behavior: smooth;
   color-scheme: dark;
+  transition: all 0.3s; 
 }
 
 body {
@@ -13,6 +14,7 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  transition: all 0.3s; 
 }
 
 @keyframes dash {
